--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -6,3 +6,26 @@ login_page:
   forgot_password: 忘记密码？
   have_not_account: 还没有账户？
   register: 注册
+
+registration_page:
+  title: 注册一个账户
+  firstname: 名字
+  lastname: 姓氏 *
+  username: 用户名昵称 *
+  email: 邮箱 *
+  password: 密码 *
+  date_birth: 出生日期
+  sex:
+    title: 性别 *
+    m: 男
+    f: 女
+  id_card: 身份证号码 *
+  phone: 电话号码 *
+  wechat: 微信号
+  region: 省市 *
+  address: 具体地址
+  btn: 注册
+  have_an_account: 已经有账户了？
+  login: 登录
+
+
