--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -27,5 +27,16 @@ registration_page:
   btn: 注册
   have_an_account: 已经有账户了？
   login: 登录
+  check_email: 系统向 %email% 发送了一封包含激活链接的邮件，请访问该链接以启用你的帐户。
+  confirm:
+    title: '%username%，恭喜你，你的帐户已启用！'
+    msg: 请登录
+  email_to_send:
+    message1: '%username%，你好！'
+    message2: '要启用你的用户帐号，请访问：%confirmationUrl%'
+    message3: 祝好
+    message4: 网站团队
+
+
 
 
