--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -83,7 +83,7 @@ purchase_page:
   purchase_id: 购买记录号
   activity: 选项
   user_id: 用户名
-  product_id: 商品名
+  product_id: 商品编号
   date_purchase: 购买时间
   purchase_tracking_id: 溯源号
   quantity: 数量
@@ -113,3 +113,15 @@ profile_page:
     responsible: 负责人
   btn: 提交
   cancel: 取消
+product_page:
+  product_id: 商品编号
+  product_name: 商品名
+  barcode: 条形码
+  image_path: 商品图片路径
+  category: 商品类别
+  shelf_life: 保质期
+  promotion: 促销情况
+  stock: 库存
+  description: 商品描述
+  action: 操作
+  add_row: 添加产品
