--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -52,7 +52,6 @@ sidebar:
     logout: 登出
     admin: 管理员
     index: 首页
-    buy_histo: 购买记录
     product_info: 产品信息
     product_source: 产品溯源
   admin:
@@ -60,6 +59,7 @@ sidebar:
     sellers: 销售员信息
     admins: 管理员信息
     products: 产品信息
+    buy_histo: 购买记录
   setting:
     skins: 切换皮肤
     purple: 紫色
@@ -72,14 +72,16 @@ sidebar:
 purchase_page:
   purchase_id: 购买记录号
   activity: 选项
-  user_id: 用户名
+  user_id: 会员号
   product_id: 商品编号
   date_purchase: 购买时间
   purchase_tracking_id: 溯源号
   quantity: 数量
-  title: 输入购买记录
+  register: 输入购买记录
+  modify: 修改购买记录
   btn: 保存
   return: 返回
+  phone: 用户手机号
   index:
     add_row: 添加
 
