--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -111,8 +111,8 @@ product_page:
 
 tracking_page:
   add_row: 添加
-  tracking_id: 溯源号
-  product_id: 产品名
+  tracking_id: 溯源编号
+  product_id: 产品编号
   production_date: 生产日期
   batch_id: 批次
   starting_time: 开始生产时间
