--- a/translations/ums.zh_CN.yaml
+++ b/translations/ums.zh_CN.yaml
@@ -111,8 +111,10 @@ product_page:
   modify: 修改产品信息
 
 tracking_page:
+  header: 溯源信息
   register: 输入溯源信息
   modify: 修改溯源信息
+  batch_modify: 批量修改
   edit_row: 编辑
   add_row: 添加
   tracking_id: 溯源编号
@@ -158,6 +160,11 @@ tracking_page:
   Site2Message: 站点2信息
   Site3Message: 站点3信息
   ClientMessage: 用户信息
+  add_batch: 批量添加
+  batch_register: 输入溯源信息
+  batch_number: 批量数量
+
+
 
 
 
